--- a/MinorLinq/MinorLinq.csproj
+++ b/MinorLinq/MinorLinq.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.5" />
       <PackageReference Include="Npgsql" Version="4.1.3.1" />
     </ItemGroup>
 
