--- a/MinorLinq/MinorLinq.csproj
+++ b/MinorLinq/MinorLinq.csproj
@@ -4,6 +4,10 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
+    
+    <ItemGroup>
+        <None Include="sample.db" CopyToOutputDirectory="Always" />
+    </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.5" />
